# SIN-Code-MCP-Server-Builder-Skill

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ceo-audit.yml
scripts/: mcp-add-tool.sh  mcp-add-tool.sh.doc.md  mcp-publish.sh  mcp-publish.sh.doc.md  mcp-register.sh  mcp-register.sh.doc.md  mcp-scaffold.sh  mcp-scaffold.sh.doc.md  mcp-test.sh  mcp-test.sh.doc.md  mcp-validate.sh  mcp-validate.sh.doc.md
src/sin_mcp_server_builder/: __init__.doc.md  __init__.py  auditor.doc.md  auditor.py  mcp_server.doc.md  mcp_server.py  publisher.doc.md  publisher.py  registrar.doc.md  registrar.py  scaffolder.doc.md  scaffolder.py  templates.doc.md  templates.py  test_gen.doc.md  test_gen.py  tool_adder.doc.md  tool_adder.py  validator.doc.md  validator.py
src/sin_mcp_server_builder/cli_shims/: __init__.py  mcp_audit.py  mcp_publish.py  mcp_register.py  mcp_scaffold.py  mcp_template_list.py  mcp_tool_add.py  mcp_tool_test.py  mcp_validate.py
templates/go-mcp/: README.md  go.mod  main.doc.md  main.go  main_test.doc.md  main_test.go
templates/go-mcp/.github/workflows/: ceo-audit.yml
templates/node-mcp/: README.md  package.json
templates/node-mcp/.github/workflows/: ceo-audit.yml
templates/node-mcp/src/: index.doc.md  index.js
templates/node-mcp/tests/: tools.test.doc.md  tools.test.js
templates/python-fastmcp/: .gitignore  README.md  SKILL.md  pyproject.toml
templates/python-fastmcp/.github/workflows/: ceo-audit.yml
templates/python-fastmcp/src/{{ pkg }}/: __init__.doc.md  __init__.py  mcp_server.doc.md  mcp_server.py
templates/python-fastmcp/tests/: test_mcp_server.doc.md  test_mcp_server.py
tests/: test_auditor.doc.md  test_auditor.py  test_mcp_server.doc.md  test_mcp_server.py  test_package.doc.md  test_package.py  test_publisher.doc.md  test_publisher.py  test_registrar.doc.md  test_registrar.py  test_scaffolder.doc.md  test_scaffolder.py  test_templates.doc.md  test_templates.py  test_test_gen.doc.md  test_test_gen.py  test_tool_adder.doc.md  test_tool_adder.py  test_validator.doc.md  test_validator.py
