[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-mcp-server-builder"
version = "0.1.0"
description = "SIN-MCP-Server-Builder Skill — meta-skill that scaffolds new MCP servers (python-fastmcp / node-mcp / go-mcp) following the OpenSIN-Code canonical pattern."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenSIN-Code", email = "contact@opensincode.org"}
]
keywords = ["mcp", "scaffolder", "sin-code", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "fastmcp>=0.3.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
sin-mcp-server-builder-mcp = "sin_mcp_server_builder.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sin_mcp_server_builder*"]

[tool.setuptools.package-data]
"sin_mcp_server_builder" = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/sin_mcp_server_builder"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
